Task: Upload of Day 2 web assignment.

--- a/about.html
+++ b/about.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>About Page</title>
 </head>
 <body>
-<h1>Ariel's Web Page</h1>
-<p>This is my home page where I like to store
-    <br>content in. Feel free to look around!
+<h1>About Me</h1>
+<p>I am Ariel Batista, a senior university student
+    <br>studying Information Technology. I'm really
+    <br>liking the idea of pursuing web development
+    <br>as my profession, and am looking forward to
+    <br>more material to be covered in IS 117.
 </p>
 <br><br>
 <h2>Contents To Check Out:</h2>
